fixed sample app

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -27,12 +27,11 @@
         android:id="@+id/activityMainButton"
         android:layout_width="256dp"
         android:layout_height="64dp"
-        android:layout_marginTop="144dp"
+        android:layout_marginTop="64dp"
         android:text="modify data"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/lowerLeft" />
 
     <TextView
         android:id="@+id/lowerLeft"
@@ -70,7 +69,7 @@
         android:id="@+id/upperRight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="272dp"
         android:layout_marginEnd="32dp"
         android:background="#FFC107"
         android:padding="32dp"
@@ -79,14 +78,14 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activityMainButton" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/upperLeft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="272dp"
         android:background="#9C27B0"
         android:padding="32dp"
         android:text="TextView"
@@ -94,6 +93,6 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activityMainButton" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
